[gd_scene load_steps=7 format=3 uid="uid://brdcc0ktpcj86"]

[ext_resource type="PackedScene" uid="uid://bqsj2yytmrvb0" path="res://scene/enemy/Enemy_Parent.tscn" id="1_8cp3x"]
[ext_resource type="Script" path="res://scene/enemy/Enemy_Melee.gd" id="2_vyjv8"]
[ext_resource type="Texture2D" uid="uid://bubqhu0hrg5j3" path="res://assets/unused/charaTBD - Copy.png" id="3_vbxhd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2hx6e"]
radius = 15.7143

[sub_resource type="CircleShape2D" id="CircleShape2D_x01wv"]
radius = 137.015

[sub_resource type="CircleShape2D" id="CircleShape2D_i7i42"]
radius = 46.0435

[node name="Enemy_Melee" instance=ExtResource("1_8cp3x")]
script = ExtResource("2_vyjv8")
enemy_type = "Day"
health = 1500.0
speed = 75.0
speed_when_attacking = 10.0
patrol_radius = 100

[node name="Sprite2D" parent="." index="0"]
texture = ExtResource("3_vbxhd")

[node name="AttackPoint" type="Marker2D" parent="Sprite2D" index="0"]
unique_name_in_owner = true
position = Vector2(5.71428, 0)
scale = Vector2(1.42857, 1.42857)

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource("CircleShape2D_2hx6e")

[node name="CollisionShape2D" parent="PathfindingArea" index="0"]
shape = SubResource("CircleShape2D_x01wv")

[node name="CollisionShape2D" parent="AttackArea" index="0"]
shape = SubResource("CircleShape2D_i7i42")

[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
